# netscope

./: CMakeLists.txt  README.md
backend/: handlers.cpp  handlers.h  ip_info.cpp  ip_info.h  main.cpp  networking.h  ping_tool.cpp  ping_tool.h  port_scanner.cpp  port_scanner.h  whois_lookup.cpp  whois_lookup.h
backend/utils/: networking_utils.h
public/: index.html  script.js  style.css
